# wordpress-db-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: __init__.py  conftest.py  test_helpers.py  test_tools.py  test_validation.py
wordpress_db_mcp/: __init__.py  config.py  db.py  models.py  server.py  utils.py
wordpress_db_mcp/models/: __init__.py  base.py  connections.py  meta.py  query.py  schema.py  shadow.py  terms.py
wordpress_db_mcp/tools/: __init__.py  connections.py  meta.py  query.py  relationships.py  schema.py  shadow.py  terms.py
wp_db_mcp/: __init__.py  config.py  db.py  server.py  validation.py
wp_db_mcp/models/: __init__.py
wp_db_mcp/tools/: connections.py  meta.py  relationships.py  schema.py  shadow.py  terms.py
